<resources>
    <string name="app_name">Uthe</string>

    <!-- MAIN NAVIGATION -->
    <string name="piping_item">Piping</string>
    <string name="statistics_item">Statistics</string>
    <string name="settings_item">Settings</string>

    <!-- MENUS -->
    <string name="logout_item">Logout</string>
    
    <!-- LOGIN/SIGNUP -->
    <string name="email_username">Email or username</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="signup">Create account</string>
    <string name="forgot">Forgot my password</string>
    <string name="pass_again">Repeat password</string>
    <string name="username">Username</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="login">Login</string>

    <!-- ERRORS -->
    <string name="empty_field">Input this field</string>
    <string name="incorrect_email">Incorrect email</string>
    <string name="password_error">Passwords must match</string>
    
    <!-- STATISTICS -->
    <string name="allowed_liters">Allowed liters</string>
    <string name="consumed_liters">Consumed liters</string>
    <string name="remaining_literes">Remaining liters</string>
    <string name="statistics_title">Here\'s your water consume</string>

    <!-- PIPING -->
    <string name="scan">Scan</string>
    <string name="piping_info">Here you can scan a QR code to consume water</string>

</resources>
