<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingBottom="@dimen/vertical_padding"
        android:paddingEnd="@dimen/horizontal_padding"
        android:paddingLeft="@dimen/horizontal_padding"
        android:paddingRight="@dimen/horizontal_padding"
        android:paddingStart="@dimen/horizontal_padding"
        android:paddingTop="@dimen/vertical_padding"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/in_email_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_username"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_input_separation">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/in_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/b_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@android:color/white"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/b_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center"/>

        <include
            layout="@layout/aux_input_view"/>

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/b_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:textColor="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/vertical_padding"/>

    <include
        layout="@layout/loading"/>

</RelativeLayout>