<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@android:color/transparent"
        app:titleTextColor="@color/colorSecondary"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/horizontal_padding"
            android:paddingTop="@dimen/vertical_padding"
            android:paddingStart="@dimen/horizontal_padding"
            android:paddingLeft="@dimen/horizontal_padding"
            android:paddingEnd="@dimen/horizontal_padding"
            android:paddingBottom="@dimen/vertical_padding"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/in_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_input_separation">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/in_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:imeOptions="actionNext"
                    android:inputType="textAutoComplete"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_input_separation">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/in_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:imeOptions="actionNext"
                    android:inputType="textAutoComplete"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_input_separation">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/in_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_input_separation">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/in_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pass"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_pass_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_input_separation">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/in_pass_again"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pass_again"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>

            <include
                layout="@layout/aux_input_view"/>

        </android.support.v7.widget.LinearLayoutCompat>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:pressedTranslationZ="@dimen/fab_pressed"
        app:backgroundTint="@android:color/white"
        android:tint="@color/colorPrimary"
        android:src="@drawable/ic_check"
        app:rippleColor="@color/colorPrimary"/>

    <include
        layout="@layout/loading"/>

</android.support.design.widget.CoordinatorLayout>