<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="4dp"
    app:cardCornerRadius="4dp"
    app:cardUseCompatPadding="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/vertical_padding"
            android:paddingTop="@dimen/vertical_padding"
            android:paddingStart="@dimen/horizontal_padding"
            android:paddingEnd="@dimen/horizontal_padding"
            android:paddingLeft="@dimen/horizontal_padding"
            android:paddingRight="@dimen/horizontal_padding"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/allowed_liters"
                style="@style/Base.TextAppearance.AppCompat.Large"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/allowed_liters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/consumed_liters"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_marginTop="@dimen/vertical_input_separation"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/consumed_liters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remaining_literes"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_marginTop="@dimen/vertical_input_separation"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/remaining_liters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </android.support.v7.widget.LinearLayoutCompat>

    </RelativeLayout>

</android.support.v7.widget.CardView>